add-modules option